fixed weird misalignments

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.3%;
+    padding: 1.3% 0;
     height: 4.3vh;
     font-size: 25px;
     box-shadow: 0px 5px 6px -5px rgb(70, 70, 70);
@@ -125,7 +125,7 @@ h2 {
 }
 @media (max-width: 600px) {
     .nav-element {
-        display: none;
+        font-size: medium;
     }
 }
 
@@ -173,14 +173,21 @@ h2 {
     align-items: center;
     padding: 1%;
 }
+#project-page-container {
+    background-color: rgba(255, 255, 255, 1);
+    color: rgb(103, 103, 103);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90vw;
+}
 #page-content {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
     width: 60vw;
-    background-color: rgba(255, 255, 255, 1);
-    color: rgb(103, 103, 103);
     font-size: large;
 }
 .page-text {
